switching to new source-input component for source selection

--- a/client/src/app/forms/types/source-input/source-input.component.html
+++ b/client/src/app/forms/types/source-input/source-input.component.html
@@ -1,1 +1,7 @@
 <p>source-input works!</p>
+
+<!--
+     <formly-form [form]="sourceForm"
+     [model]="sourceModel"
+     [fields]="sourceFields"
+     [options]="formOptions"></formly-form> -->
