addition of key field in fieldArray provides proper field control to source-input

--- a/client/src/app/forms/types/source-input/source-input.component.html
+++ b/client/src/app/forms/types/source-input/source-input.component.html
@@ -1,4 +1,7 @@
-<p>source-input works!</p>
+<p>Field:</p>
+<ngx-json-viewer [json]="field" ></ngx-json-viewer>
+<!-- <p>Multi-Field Field Model:</p>
+     <ngx-json-viewer [json]="field.model" ></ngx-json-viewer> -->
 
 <!--
      <formly-form [form]="sourceForm"
