source-input field getting proper model from parent source array

--- a/client/src/app/forms/types/source-input/source-input.component.html
+++ b/client/src/app/forms/types/source-input/source-input.component.html
@@ -1,4 +1,4 @@
-<p>Field:</p>
+<p>source-input Field:</p>
 <ngx-json-viewer [json]="field" ></ngx-json-viewer>
 <!-- <p>Multi-Field Field Model:</p>
      <ngx-json-viewer [json]="field.model" ></ngx-json-viewer> -->
