--- a/client/src/app/forms/types/source-input/source-input.component.html
+++ b/client/src/app/forms/types/source-input/source-input.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="!model.id; else sourceListItem">
-  <cvc-source-selector ></cvc-source-selector>
+  <cvc-source-selector [(source)]="model"></cvc-source-selector>
 </ng-container>
 <ng-template #sourceListItem>
   <cvc-source-list-item [source]="model"></cvc-source-list-item>
