cleaned up some extranneous imports, vars

--- a/client/src/app/forms/types/source-input/source-input.component.html
+++ b/client/src/app/forms/types/source-input/source-input.component.html
@@ -1,15 +1,6 @@
-<ng-container *ngIf="!model.id; else sourceListItem">
+<ng-container *ngIf="!formControl.value.id; else sourceListItem">
   <cvc-source-selector (sourceSelected)="onSourceSelected($event)"></cvc-source-selector>
 </ng-container>
 <ng-template #sourceListItem>
-  <cvc-source-list-item [(source)]="model"></cvc-source-list-item>
+  <cvc-source-list-item [source]="formControl.value"></cvc-source-list-item>
 </ng-template>
-<!-- <ngx-json-viewer [json]="field" ></ngx-json-viewer> -->
-<!-- <p>Multi-Field Field Model:</p>
-     <ngx-json-viewer [json]="field.model" ></ngx-json-viewer> -->
-
-<!--
-     <formly-form [form]="sourceForm"
-     [model]="sourceModel"
-     [fields]="sourceFields"
-     [options]="formOptions"></formly-form> -->
