typeahead-selector config set up

--- a/client/src/app/forms/components/source-selector/source-selector.component.less
+++ b/client/src/app/forms/components/source-selector/source-selector.component.less
@@ -5,6 +5,7 @@
 @source-selector-width: 10em;
 @input-spacer: 0.5em;
 
+// viewEncapsulation off for this type, so styles scoped to its element:
 cvc-source-input {
   .formly-form {
     width: 100%;
