fixed type issue with picky nzPlaceholder attribute

--- a/client/src/app/forms/types/typeahead-selector/typeahead-selector.component.html
+++ b/client/src/app/forms/types/typeahead-selector/typeahead-selector.component.html
@@ -1,5 +1,5 @@
 <nz-select [class.ng-dirty]="showError"
-  [nzPlaceHolder]="to.placeholder"
+  [nzPlaceHolder]="!to.placeholder ? null : to.placeholder"
   [formControl]="formControl"
   [formlyAttributes]="field"
   [nzMode]="to.multiple ? 'multiple' : 'default'">
