--- a/client/src/app/forms/types/typeahead-selector/typeahead-selector.component.html
+++ b/client/src/app/forms/types/typeahead-selector/typeahead-selector.component.html
@@ -1,20 +1,31 @@
-<nz-select [class.ng-dirty]="showError"
-  [nzPlaceHolder]="!to.placeholder ? null : to.placeholder"
-  [formControl]="formControl"
-  [formlyAttributes]="field"
-  [nzMode]="to.multiple ? 'multiple' : 'default'">
-  <ng-container *ngFor="let item of to.options | formlySelectOptions: field | async">
-    <nz-option-group *ngIf="item.group"
-      [nzLabel]="item.label">
-      <nz-option *ngFor="let child of item.group"
-        [nzValue]="child.value"
-        [nzDisabled]="child.disabled"
-        [nzLabel]="child.label">
-      </nz-option>
-    </nz-option-group>
-    <nz-option *ngIf="!item.group"
-      [nzValue]="item.value"
-      [nzDisabled]="item.disabled"
-      [nzLabel]="item.label"></nz-option>
-  </ng-container>
+<!-- <nz-select [class.ng-dirty]="showError"
+     [nzPlaceHolder]="!to.placeholder ? null : to.placeholder"
+     [formControl]="formControl"
+     [formlyAttributes]="field"
+     [nzFilterOption]="to.filterOption"
+     [nzMode]="to.multiple ? 'multiple' : 'default'">
+     <ng-container *ngFor="let item of to.optionList | formlySelectOptions: field | async">
+     <nz-option *ngIf="!to.isLoading"
+     [nzValue]="item.value"
+     [nzLabel]="item.label"
+     [nzDisabled]="item.disabled"></nz-option>
+     </ng-container>
+     <nz-option *ngIf="to.isLoading"
+     nzDisabled
+     nzCustomContent>
+     <i nz-icon
+     nzType="loading"
+     class="loading-icon"></i> Loading Data...
+     </nz-option>
+     </nz-select> -->
+<nz-select nzShowSearch
+  nzServerSearch
+  nzPlaceHolder="input search text"
+  [(ngModel)]="selectedValue"
+  [nzShowArrow]="false"
+  [nzFilterOption]="nzFilterOption"
+  (nzOnSearch)="search($event)">
+  <nz-option *ngFor="let o of listOfOption"
+    [nzLabel]="o.text"
+    [nzValue]="o.value"> </nz-option>
 </nz-select>
