onSearch updating option list on templateOptions

--- a/client/src/app/forms/types/typeahead-selector/typeahead-selector.component.html
+++ b/client/src/app/forms/types/typeahead-selector/typeahead-selector.component.html
@@ -26,7 +26,7 @@
   [nzShowArrow]="to.showArrow"
   [nzFilterOption]="to.filterOption"
   (nzOnSearch)="to.onSearch($event)">
-  <nz-option *ngFor="let o of listOfOption"
-    [nzLabel]="o.text"
+  <nz-option *ngFor="let o of to.options | formlySelectOptions: field | async"
+    [nzLabel]="o.label"
     [nzValue]="o.value"> </nz-option>
 </nz-select>
