--- a/client/src/app/forms/components/source-selector/source-selector.component.less
+++ b/client/src/app/forms/components/source-selector/source-selector.component.less
@@ -4,6 +4,7 @@
 
 @source-selector-width: 10em;
 @input-spacer: 0.5em;
+@submit-button-width: 2em;
 
 // viewEncapsulation off for this type, so styles scoped to its element:
 cvc-source-input {
@@ -19,6 +20,11 @@ cvc-source-input {
   .citation-id-field {
     display: inline-block;
     margin-left: @input-spacer;
-    width: calc(~'100% - @{source-selector-width} - @{input-spacer}')
+    width: calc(~'100% - @{source-selector-width} - 2*@{input-spacer} - @{submit-button-width}')
+  }
+  .submit-button {
+    margin-left: @input-spacer;
+    display: inline-block;
+    width: @submit-button-width
   }
 }
