source-selector no longer displays previously added citation

--- a/client/src/app/components/sources/source-list-item/source-list-item.component.html
+++ b/client/src/app/components/sources/source-list-item/source-list-item.component.html
@@ -1,1 +1,4 @@
-ID: {{ source.id }} Citation: {{ source.citation }}
+<div class="container" >
+  <cvc-source-tag [source]="source"></cvc-source-tag>
+  {{ source.citation }}
+</div>
