--- a/client/src/app/forms/components/source-selector/source-selector.component.html
+++ b/client/src/app/forms/components/source-selector/source-selector.component.html
@@ -9,6 +9,6 @@
     [form]="form"
     class="formly-form"></formly-form>
 </form>
-<p class="viewer">
-  <ngx-json-viewer [json]="form.value"> </ngx-json-viewer>
-</p>
+<!-- <p class="viewer">
+     <ngx-json-viewer [json]="form.value"> </ngx-json-viewer>
+     </p> -->
