--- a/client/src/app/forms/types/source-input/source-input.component.html
+++ b/client/src/app/forms/types/source-input/source-input.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="!formControl.value.id; else sourceListItem">
+<ng-container *ngIf="!formControl.value?.id; else sourceListItem">
   <cvc-source-selector (sourceSelected)="onSourceSelected($event)"></cvc-source-selector>
 </ng-container>
 <ng-template #sourceListItem>
