added source loader, its gql queries, improved typeahead behavior

--- a/client/src/app/components/sources/source-list-item/source-list-item.component.html
+++ b/client/src/app/components/sources/source-list-item/source-list-item.component.html
@@ -1,4 +1,4 @@
 <div class="container" >
   <cvc-source-tag [source]="source"></cvc-source-tag>
-  {{ source.citation }}
+  <em>{{ source.citation }}</em>
 </div>
