--- a/client/src/app/components/shared/event-feed/event-feed.component.html
+++ b/client/src/app/components/shared/event-feed/event-feed.component.html
@@ -1,39 +1,51 @@
-<div class="event-feed">
-    <nz-row [nzGutter]="16">
-        <nz-col nzSpan="18">
-            <h3>History</h3>
-            <nz-timeline>
-                <nz-timeline-item *ngFor="let e of events$ | ngrxPush" [nzDot]="timelineDotTemplate">
-                    <ng-template #timelineDotTemplate>
-                        <icon nz-icon [nzType]="iconNameForEventAction(e.action)" style="font-size: 24px;"></icon>
-                    </ng-template>
-                    <div class="event-feed-item">
-                        <nz-divider nz-tooltip [nzTooltipTitle]="e.createdAt | date" nzTooltipPlacement="topRight"
-                            [nzText]="e.createdAt | timeago" nzPlain="true" nzOrientation="right"></nz-divider>
-                        <cvc-user-pill [user]="e.originatingUser"></cvc-user-pill>
-                        <span>{{ verbiageForEvent(e) }}</span>
-                        <span> {{ e.subject.name }}</span>
-                        <span *ngIf="e.organization">
-                            on behalf of <cvc-org-pill [org]="e.organization"></cvc-org-pill>
-                        </span>
-                    </div>
-                </nz-timeline-item>
-            </nz-timeline>
+<ng-container *ngIf="events$ | ngrxPush as events">
+    <div class="event-feed">
+        <nz-row [nzGutter]="16">
+            <nz-col nzSpan="18">
+                <h3>History</h3>
+                <nz-timeline *ngIf="events.length">
+                    <nz-timeline-item *ngFor="let e of events" [nzDot]="timelineDotTemplate">
+                        <ng-template #timelineDotTemplate>
+                            <icon nz-icon [nzType]="iconNameForEventAction(e.action)" style="font-size: 24px;"></icon>
+                        </ng-template>
+                        <div class="event-feed-item">
+                            <nz-divider nz-tooltip [nzTooltipTitle]="e.createdAt | date" nzTooltipPlacement="topRight"
+                                [nzText]="e.createdAt | timeago" nzPlain="true" nzOrientation="right"></nz-divider>
+                            <cvc-user-pill [user]="e.originatingUser"></cvc-user-pill>
+                            <span>{{ verbiageForEvent(e) }}</span>
+                            <span> {{ e.subject.name }}</span>
+                            <span *ngIf="e.organization">
+                                on behalf of <cvc-org-pill [org]="e.organization"></cvc-org-pill>
+                            </span>
+                        </div>
+                    </nz-timeline-item>
+                </nz-timeline>
 
-            <ng-container *ngIf="pageInfo$ | ngrxPush as pageInfo">
-                <div nz-list-load-more *ngIf="pageInfo.hasNextPage">
-                    <button nz-button nzType="link" nzSize="small" nzBlock (click)="fetchMore(pageInfo.endCursor)">Load
-                        More</button>
-                </div>
-            </ng-container>
-        </nz-col>
-        <nz-col nzSpan="6">
-            <h3>Filter History</h3>
-            <cvc-participant-list listTitle="Participants" [participantList]="participants$ | ngrxPush" (participantSelectedEvent)="onParticipantSelected($event)">
-                <ng-template #itemTemplate let-user>
-                    <cvc-user-pill [user]="user"></cvc-user-pill>
-                </ng-template>
-            </cvc-participant-list>
-        </nz-col>
-    </nz-row>
-</div>
+                <ng-container *ngIf="pageInfo$ | ngrxPush as pageInfo">
+                    <div nz-list-load-more *ngIf="pageInfo.hasNextPage">
+                        <button nz-button nzType="link" nzSize="small" nzBlock
+                            (click)="fetchMore(pageInfo.endCursor)">Load
+                            More</button>
+                    </div>
+                </ng-container>
+            </nz-col>
+            <nz-col nzSpan="6">
+                <h3>Filter History</h3>
+                <cvc-participant-list listTitle="Participants" [participantList]="participants$ | ngrxPush"
+                    (participantSelectedEvent)="onParticipantSelected($event)">
+                    <ng-template #itemTemplate let-user>
+                        <cvc-user-pill [user]="user"></cvc-user-pill>
+                    </ng-template>
+                </cvc-participant-list>
+                <nz-divider></nz-divider>
+                <cvc-participant-list listTitle="Organizations" [participantList]="organizations$ | ngrxPush"
+                    (participantSelectedEvent)="onOrganizationSelected($event)">
+                    <ng-template #itemTemplate let-org>
+                        <cvc-org-pill [org]="org"></cvc-org-pill>
+                    </ng-template>
+                </cvc-participant-list>
+            </nz-col>
+        </nz-row>
+    </div>
+
+</ng-container>
