--- a/client/src/app/components/shared/event-feed/event-feed.component.html
+++ b/client/src/app/components/shared/event-feed/event-feed.component.html
@@ -18,6 +18,14 @@
                                 on behalf of <cvc-org-pill [org]="e.organization"></cvc-org-pill>
                             </span>
                         </div>
+                        <ng-container *ngIf="e.originatingObject" [ngSwitch]="e.originatingObject.__typename">
+                            <nz-card *ngSwitchCase="'Comment'"> {{ e.originatingObject.comment }} </nz-card>
+                            <nz-card *ngSwitchCase="'Flag'"><cvc-comment-display [comment]="e.originatingObject.comments.nodes[0]"></cvc-comment-display> </nz-card>
+                            <nz-card *ngSwitchCase="'Revision'">
+                                <cvc-user-pill [user]="e.originatingObject.revisor"></cvc-user-pill>
+                                {{ e.originatingObject.name }} to {{ e.originatingObject.linkoutData.name }}
+                            </nz-card>
+                        </ng-container>
                     </nz-timeline-item>
                 </nz-timeline>
 
