typeahead & source-loader updating source-input's list properly

--- a/client/src/app/forms/components/source-loader/source-loader.component.html
+++ b/client/src/app/forms/components/source-loader/source-loader.component.html
@@ -1,15 +1,30 @@
 <ng-container *ngIf="foundCitation; else fetchCitation">
+  <!-- found citation, add to CIViC sources?-->
   <nz-space nzDirection="vertical">
-    <nz-space-item>
-      <nz-alert nzType="success"
-        [nzMessage]="successMessage"
+    <nz-space-item *ngIf="createSuccess === false && createErrors.length === 0">
+      <nz-alert nzType="info"
+        [nzMessage]="foundCitationMsg"
         nzShowIcon>
       </nz-alert>
-      <ng-template #successMessage>
+      <ng-template #foundCitationMsg>
         Found citation: <em>{{ foundCitation }}</em>
       </ng-template>
     </nz-space-item>
-    <nz-space-item>
+    <nz-space-item *ngIf="createSuccess === true">
+      <nz-alert nzType="success"
+        [nzMessage]="createdMsg"
+        nzShowIcon>
+      </nz-alert>
+      <ng-template #createdMsg>
+        '<em>{{ foundCitation }}</em>' created.
+      </ng-template>
+    </nz-space-item>
+    <nz-form-item *ngIf="createErrors.length > 0">
+      <cvc-form-errors-alert [errors]="createErrors">
+      </cvc-form-errors-alert>
+    </nz-form-item>
+    <nz-space-item *ngIf="createSuccess === false">
+      <!-- create new source stub button -->
       <button type="submit"
         (click)="onCreateSourceStub($event)"
         [nzLoading]="isCreating"
@@ -17,12 +32,24 @@
         nzBlock
         nzType="primary"
         nzSize="default">
-        Add {{ foundCitation }} to CIViC's Sources
+        Create&nbsp;'<em>{{ foundCitation }}</em>'&nbsp; CIViC Source
+      </button>
+    </nz-space-item>
+    <nz-space-item *ngIf="createSuccess === true">
+      <!-- Accept & add new source to source list -->
+      <button type="submit"
+        (click)="onAcceptSource($event)"
+        nz-button
+        nzBlock
+        nzType="primary"
+        nzSize="default">
+        Add Source to List
       </button>
     </nz-space-item>
   </nz-space>
 </ng-container>
 <ng-template #fetchCitation>
+  <!-- source not found, fetch citation? -->
   <nz-space nzDirection="vertical">
     <nz-space-item>
       <span *ngIf="showPrompt"
