--- a/client/src/app/components/shared/event-feed/event-feed.component.html
+++ b/client/src/app/components/shared/event-feed/event-feed.component.html
@@ -11,12 +11,25 @@
                         <div class="event-feed-item">
                             <nz-divider nz-tooltip [nzTooltipTitle]="e.createdAt | date" nzTooltipPlacement="topRight"
                                 [nzText]="e.createdAt | timeago" nzPlain="true" nzOrientation="right"></nz-divider>
-                            <cvc-user-pill [user]="e.originatingUser"></cvc-user-pill>
-                            <span>{{ verbiageForEvent(e) }}</span>
-                            <span> {{ e.subject.name }}</span>
-                            <span *ngIf="e.organization">
-                                on behalf of <cvc-org-pill [org]="e.organization"></cvc-org-pill>
-                            </span>
+                            <nz-space>
+                                <nz-space-item>
+                                    <cvc-user-pill [user]="e.originatingUser"></cvc-user-pill>
+                                </nz-space-item>
+                                <nz-space-item>
+                                    <span>{{ verbiageForEvent(e) }}</span>
+                                </nz-space-item>
+                                <nz-space-item>
+                                    <ng-container [ngSwitch]="e.subject.__typename">
+                                        <span *ngSwitchCase="'Gene'"><cvc-gene-pill [gene]="e.subject"></cvc-gene-pill></span>
+                                        <span *ngSwitchDefault>{{ e.subject.name }}</span>
+                                    </ng-container>
+                                </nz-space-item>
+                                <nz-space-item>
+                                    <span *ngIf="e.organization">
+                                        on behalf of <cvc-org-pill [org]="e.organization"></cvc-org-pill>
+                                    </span>
+                                </nz-space-item>
+                            </nz-space>
                         </div>
                         <ng-container *ngIf="e.originatingObject" [ngSwitch]="e.originatingObject.__typename">
                             <nz-card *ngSwitchCase="'Comment'"> {{ e.originatingObject.comment }} </nz-card>
@@ -37,7 +50,7 @@
                     </div>
                 </ng-container>
             </nz-col>
-            <nz-col nzSpan="6">
+            <nz-col nzSpan="5">
                 <h3>Filter History</h3>
                 <cvc-participant-list listTitle="Participants" [participantList]="participants$ | ngrxPush"
                     (participantSelectedEvent)="onParticipantSelected($event)">
