add initial attempt at error handling to flag resolution

--- a/client/src/app/components/shared/resolve-flag/resolve-flag.component.html
+++ b/client/src/app/components/shared/resolve-flag/resolve-flag.component.html
@@ -1,3 +1,12 @@
+<nz-alert *ngIf="errorMessages" nzType="error" nzShowIcon [nzDescription]="errorContents" nzMessage="Error Resolving Flag"> </nz-alert>
+<ng-template #errorContents>
+  <ul>
+    <li *ngFor="let error of errorMessages">
+      {{ error }}
+    </li>
+  </ul>
+</ng-template>
+
 <nz-card nzType="inner">
     <form nz-form
       [formGroup]="formGroup"
