add variant summary routes and page

--- a/client/src/app/views/variants/variants-detail/variants-detail.component.html
+++ b/client/src/app/views/variants/variants-detail/variants-detail.component.html
@@ -166,6 +166,11 @@
             </ul>
           </nz-dropdown-menu>
         </nz-page-header-extra>
+        <nz-page-header-content>
+          <div class="content">
+            <router-outlet></router-outlet>
+          </div>
+        </nz-page-header-content>
       </nz-page-header>
     </div>
 </ng-container>
